--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ master, 'origin/product', 'origin/richModel' ]
   pull_request:
-    branches: [ master, product, richModel ]
+    branches: [ master, 'origin/product', 'origin/richModel' ]
 
 jobs:
   build:
